--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://mre55.github.io/bookstore/",
+  "homepage": ".",
   "name": "bookstore",
   "version": "0.1.0",
   "private": true,
